@version $Id$

* 2.0.2 to be released 2007-10-??

    2007-09-09
    * connection and stream close() functions will work according to specification.

    2007-09-04
    * for J9 -Dmicroedition.connection.pkgs=com.intel.bluetooth is optonal when bluecove.jar installed to "%J9_HOME%\lib\jclMidp20\ext\

    2007-08-28
    * log4j integration, Bluecove log redirected to log4j when one is available in classpath

* 2.0.1 released 2007-08-28

    2007-08-24
    * Full OBEX over RFCOMM and TCP
    * Bluetooth_1-1_006_TCK on WIDCOMM, Pass 513, Fail 19. (some security features not implemented)
    * Review javadocs

    2007-07-22 Vlad Skarzhevskyy
    * L2CAP implementation, Only on WIDCOMM stack
    * Bluetooth_1-1_005_TCK on WIDCOMM, Pass 322, Fail 3. (security not tested)

    2007-07-15 Vlad Skarzhevskyy
    * Use TCK for JSR 82 for tests, fixed major incompatibility problems

* 2.0.0 released 2007-07-05

    2007-06-29 Vlad Skarzhevskyy
    * OBEX PUT over rfcomm and tcp  (btgoep and tcpobex)

    2007-06-22 Vlad Skarzhevskyy
    * Merged J9 MIDP compatibility enhancements suggested by Kobus Grobler
    * bluecove_ce.dll WIDCOMM Stack on WinCE

    2007-06-20 Vlad Skarzhevskyy
    * Published version 2.0.0-b2
    * Moved large Winsock discovery buffers to heap instead of stack to improve stability
    * Fixed WIDCOMM Write Flow to pass all tests

    2007-06-15 Vlad Skarzhevskyy
    * Published version 2.0.0-b1
    * BlueSoleil Stack working Server implementation

    2007-06-09 Vlad Skarzhevskyy
    * BlueSoleil Stack client using overlapped I/O

    2007-06-07 Vlad Skarzhevskyy
    * intelbth.dll build by VC2005 Configuration "Win32 Release" for Microsoft and BlueSoleil Bluetooth Stack
    * bluecove.dll build by VC6 Configuration "Win32 Release"  for WIDCOMM Bluetooth Stacks
    * FIFO ReceiveBuffer for WIDCOMM Stack

    2007-06-03 Vlad Skarzhevskyy
    * WIDCOMM Stack RFCOMM working Server implementation

    2007-05-29 Vlad Skarzhevskyy